PROJECT(VISMATRIX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_VERBOSE_MAKEFILE FALSE)

ADD_DEFINITIONS(-w)

INCLUDE_DIRECTORIES(
    ${VISMATRIX_SOURCE_DIR}/glui/include
    ${VISMATRIX_SOURCE_DIR}/glui/include/GL
    ${VISMATRIX_SOURCE_DIR}
)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
SET(LIBS ${LIBS} ${OPENGL_LIBRARIES})
SET(LIBS ${LIBS} ${GLUT_LIBRARIES})

SUBDIRS(glui)

SET(LIBS ${LIBS} "glui" -lz)

FILE(GLOB ALL "*.h" "*.hpp" "*.cc")
ADD_EXECUTABLE(vismatrix ${ALL})
TARGET_LINK_LIBRARIES(vismatrix ${LIBS})
SET_TARGET_PROPERTIES(vismatrix PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")

INSTALL(TARGETS vismatrix DESTINATION bin)
