cmake_minimum_required(VERSION 3.25)
PROJECT(VISMATRIX)


SET(CMAKE_VERBOSE_MAKEFILE FALSE)

ADD_DEFINITIONS(-w)

INCLUDE_DIRECTORIES(
    ${VISMATRIX_SOURCE_DIR}/glui/include
    ${VISMATRIX_SOURCE_DIR}/glui/include/GL
    ${VISMATRIX_SOURCE_DIR}
)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
SET(LIBS ${LIBS} ${OPENGL_LIBRARIES})
SET(LIBS ${LIBS} ${GLUT_LIBRARIES})

SUBDIRS(glui)

SET(LIBS ${LIBS} "glui" -lz)

FILE(GLOB ALL "*.h" "*.hpp" "*.cc")
ADD_EXECUTABLE(vismatrix ${ALL})
TARGET_LINK_LIBRARIES(vismatrix ${LIBS})
SET_TARGET_PROPERTIES(vismatrix PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
SET_PROPERTY(TARGET vismatrix PROPERTY CXX_STANDARD 98)

INSTALL(TARGETS vismatrix DESTINATION bin)
